# HireSenseAI

backend/: .env  main.py  pyproject.toml  requirements.txt  screener.py
backend/agents/: screener.py
frontend/src/app/: page.tsx
frontend/src/app/screencvs/: page.tsx
frontend/src/components/: UploadFile.tsx
